migration homepage inprogress

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -15,11 +15,13 @@
     "register":"Register",
     "user_settings":"User Settings",
     "recipes":"Recipes",
+    "ingredients":"Ingredients",
     "explore":"Explore",
     "items_tocked":"Items stocked",
     "shopping_list":"Shopping List",
+    "import_aliment":"Import Aliment",
     "shopping_list_message":"Create and manage your shopping list with ease.",
-    "receipes":"Receipes",
+    "receipes":"Recipes",
     "receipes_message":"Discover recipes to make with your available ingredients.",
     "view_receipes":"View receipes",
     "recipes_message":"Retrieve a complete list of recipes based on your ingredients.",
@@ -36,8 +38,10 @@
     "plan_meals":"Plan Meals",
     "make_a_list":"Make a List",
     "user_preferences":"Tell us your preferences",
-    "manage_user_settings":"Settings"
-,    "Settings":"Settings",
+    "manage_user_settings":"Settings",
+    "Settings":"Settings",
+    "generate_recipe":"Generate a Recipe", 
+    "preferences_based" :"Based on Your Preferences and Your Food",
     "manage_shopping_list":"Manage your shopping list",
     "statistics_weeks":"Statistics on previous weeks",
     "get_recipes":"Get recipes based on your preferences & disponibility",
