--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -7,9 +7,13 @@
     "register_here": "S'enregistrer ici",
     "user_settings":"Paramètres utilisateur",
     "logout":"Déconnexion",
+    "ingredients":"Ingrédients",
     "sign_into_account":"Renseignez vos informations",
     "enter_email_address":"Entrez votre adresse mail",
     "enter_password":"Entrez votre mot de passe",
+    "generate_recipe":"Générer une recette",  
+    "preferences_based" :"Basée sur vos préférences",
+    "import_aliment":"Importer un aliment",
     "password_required":"Le mot de passe est requis",
     "email_required":"L'email est requis",
     "register_new_account":"Créer un nouveau compte",
