update html structure

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -19,7 +19,10 @@
     "explore":"Explore",
     "items_tocked":"Items stocked",
     "shopping_list":"Shopping List",
+    "next_recipes":"Next recipes",
     "import_aliment":"Import Aliment",
+    "ingredients_consume_quickly":"Ingredients to consume quickly",
+    "ingredients_consume_week":"Ingredients to consume this week",
     "shopping_list_message":"Create and manage your shopping list with ease.",
     "receipes":"Recipes",
     "receipes_message":"Discover recipes to make with your available ingredients.",
