--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -14,8 +14,11 @@
     "generate_recipe":"Générer une recette",  
     "preferences_based" :"Basée sur vos préférences",
     "import_aliment":"Importer un aliment",
+    "ingredients_consume_quickly":"Ingrédients à consommer rapidement",
+    "ingredients_consume_week":"Ingrédients à consommer cette semaine",
     "password_required":"Le mot de passe est requis",
     "email_required":"L'email est requis",
+    "next_recipes":"Prochaines recettes",
     "register_new_account":"Créer un nouveau compte",
     "register":"Enregistrer",
     "recipes_message":"Retrouvez une liste complète de recettes basés sur vos ingrédients.",
