--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -17,6 +17,11 @@
     "recipes":"Recipes",
     "ingredients":"Ingredients",
     "explore":"Explore",
+    "my_preferences":"My preferences",
+    "language":"Language",
+    "my_recipes":"My Recipes",
+    "sign_out": "Sign Out",
+    "account_settings": "Account Settings",
     "items_tocked":"Items stocked",
     "shopping_list":"Shopping List",
     "next_recipes":"Next recipes",
