--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -8,10 +8,15 @@
     "user_settings":"Paramètres utilisateur",
     "logout":"Déconnexion",
     "ingredients":"Ingrédients",
+    "language":"Langage",
+    "my_recipes":"Mes recettes",
+    "my_preferences":"Mes préférences",
     "sign_into_account":"Renseignez vos informations",
     "enter_email_address":"Entrez votre adresse mail",
     "enter_password":"Entrez votre mot de passe",
     "generate_recipe":"Générer une recette",  
+    "sign_out": "Se déconnecter",
+    "account_settings": "Paramètres du compte",
     "preferences_based" :"Basée sur vos préférences",
     "import_aliment":"Importer un aliment",
     "ingredients_consume_quickly":"Ingrédients à consommer rapidement",
