add preferences component

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -48,6 +48,8 @@
     "user_preferences":"Tell us your preferences",
     "manage_user_settings":"Settings",
     "Settings":"Settings",
+    "edit_preferences":"Edit preferences",
+    "preferences":"Preferences",
     "generate_recipe":"Generate a Recipe", 
     "preferences_based" :"Based on Your Preferences and Your Food",
     "manage_shopping_list":"Manage your shopping list",
