reformat translations files, reformat translations files

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,81 +1,80 @@
 {
-    "terms_of_used": "Terms of Used",
-    "privacy_policy": "Privacy Policy",
-    "login":"login",
-    "forgot_password":"Forgot Password",
-    "no_account":"Don't have an account ?",
-    "register_here": "Register Here",
-    "sign_into_account":"Sign into your account",
-    "logout":"logout",
-    "enter_email_address":"Enter email address",
-    "enter_password":"Enter password",
-    "password_required":"Password is required",
-    "email_required":"Email is required",
-    "register_new_account":"Register new account",
-    "register":"Register",
-    "user_settings":"User Settings",
-    "recipes":"Recipes",
-    "ingredients":"Ingredients",
-    "explore":"Explore",
-    "add_recipe" : "Add Recipe",
-    "update_settings":"Update Settings",
-    "my_preferences":"My preferences",
-    "language":"Language",
-    "my_recipes":"My Recipes",
-    "sign_out": "Sign Out",
-    "account_settings": "Account Settings",
-    "items_tocked":"Items stocked",
-    "shopping_list":"Shopping List",
-    "next_recipes":"Next recipes",
-    "import_aliment":"Import Aliment",
-    "ingredients_consume_quickly":"Ingredients to consume quickly",
-    "ingredients_consume_week":"Ingredients to consume this week",
-    "shopping_list_message":"Create and manage your shopping list with ease.",
-    "receipes":"Recipes",
-    "receipes_message":"Discover recipes to make with your available ingredients.",
-    "view_receipes":"View receipes",
-    "recipes_message":"Retrieve a complete list of recipes based on your ingredients.",
-    "weekly_meals":"Weekly Meals",
-    "recipes_available":"Recipes available",
-    "planned_meals":"Planned meals",
-    "list_all_ingredients":"List all ingredients",
-    "enter_your_preferences":"Enter your preferences",
-    "select_favorite_recipes":"Select your favorite recipes, the rest is automatic!",
-    "import_food":"Import your foods",
-    "view_recipes":"View recipes",
-    "add_recipes":"Add your own recipes",
-    "manage_meals":"Manage your weekly meals",
-    "plan_meals":"Plan Meals",
-    "make_a_list":"Make a List",
-    "user_preferences":"Tell us your preferences",
-    "manage_user_settings":"Settings",
-    "Settings":"Settings",
-    "edit_preferences":"Edit preferences",
-    "preferences":"Preferences",
-    "generate_recipe":"Generate a Recipe", 
-    "preferences_based" :"Based on Your Preferences and Your Food",
-    "manage_shopping_list":"Manage your shopping list",
-    "statistics_weeks":"Statistics on previous weeks",
-    "get_recipes":"Get recipes based on your preferences & disponibility",
-    "manage_inventory":"Manage your inventory",
-    "weekly_meals_message":"Plan your meals for the week with an easy-to-use calendar.",
-    "inventory":"Inventory",
-    "inventory_message":"Keep track of your ingredients and manage your pantry.",
-    "field_required":"This field is required",
-    "field_noSpecCar":"Special caracters are not admitted",
-    "enter_username":"Enter username",
-    "enter_firstName":"Enter first name",
-    "enter_lastName":"Enter last name",
-    "missing_criteria": "Missing: ",
-    "already_have_account":"Already have an account ?",
-    "field_email": "The email should be in correct format (ex: nom@exemple.com)",
-    "email_in_use":"Email already in use",
-    "password_criteria": {
-      "min_length": "At least 8 characters",
-      "special_char": "1 special character (e.g., \\!@#\\$%\\^&\\*)",
-      "uppercase": "1 uppercase letter",
-      "lowercase": "1 lowercase letter",
-      "number": "1 number"
-    },
-    "password_strength":"The password must have at least 8 characters 1 maj, 1 min, 1 spec. char & 1 number"
-  }
+    "Legal_TermsOfUse": "Terms of Used",
+    "Legal_PrivacyPolicy": "Privacy Policy",
+
+    "Auth_ForgotPassword": "Forgot Password",
+    "Auth_NoAccountPrompt": "Don't have an account ?",
+    "Auth_RegisterLink": "Register Here",
+    "Auth_SignIntoAccount": "Sign into your account",
+    "Auth_EnterEmailAddress": "Enter email address",
+    "Auth_EnterPassword": "Enter password",
+    "Auth_PasswordRequired": "Password is required",
+    "Auth_EmailRequired": "Email is required",
+    "Auth_RegisterNewAccount": "Register new account",
+    "Auth_RegisterButton": "Register",
+    "Auth_AlreadyHaveAccount": "Already have an account ?",
+    "Auth_EnterUsername": "Enter username",
+    "Auth_EnterFirstName": "Enter first name",
+    "Auth_EnterLastName": "Enter last name",
+    "Auth_EmailFormatPrompt": "The email should be in correct format (ex: nom@exemple.com)",
+    "Auth_EmailInUse": "Email already in use",
+    "Auth_SignOut": "Sign Out",
+
+    "Password_MinLength": "At least 8 characters",
+    "Password_SpecialChar": "1 special character (e.g., \\!@#\\$%\\^&\\*)",
+    "Password_Strength": "The password must have at least 8 characters 1 maj, 1 min, 1 spec. char & 1 number",
+
+    "Settings_User": "User Settings",
+    "Settings_Update": "Update Settings",
+    "Settings_MyPreferences": "My preferences",
+    "Settings_Language": "Language",
+    "Settings_Account": "Account Settings",
+    "Settings_UserPreferences": "Tell us your preferences",
+    "Settings_ManageUser": "Settings",
+    "Settings_EditPreferences": "Edit preferences",
+    "Settings_Preferences": "Preferences",
+
+    
+    "Recipes_List": "Recipes",
+    "Recipes_Ingredients": "Ingredients",
+    "Recipes_Explore": "Explore",
+    "Recipes_AddNew": "Add Recipe",
+    "Recipes_MyRecipes": "My Recipes",
+    "Recipes_Next": "Next recipes",
+    "Recipes_Message": "Retrieve a complete list of recipes based on your ingredients.",
+    "Recipes_IngredientList": "List all ingredients",
+    "Recipes_Available": "Recipes available",
+    "Recipes_View": "View recipes",
+    "Recipes_AddOwn": "Add your own recipes",
+    "Recipe_Generate": "Generate a Recipe",
+    "Recipes_GetBasedOnPreferences": "Get recipes based on your preferences & disponibility",
+
+    "Inventory_ItemsStocked": "Items stocked",
+    "Inventory_QuickConsume": "Ingredients to consume quickly",
+    "Inventory_ThisWeekConsume": "Ingredients to consume this week",
+    "Inventory_ImportFood": "Import your foods",
+    "Inventory_ImportAliment": "Import Aliment",
+    "Inventory_StatisticsWeeks": "Statistics on previous weeks",
+    "Inventory_Manage": "Manage your inventory",
+    "Inventory_Main": "Inventory",
+    "Inventory_Message": "Keep track of your ingredients and manage your pantry.",
+
+    "Meals_Weekly": "Weekly Meals",
+    "Meals_Planned": "Planned meals",
+    "Meals_ManageWeekly": "Manage your weekly meals",
+    "Meals_Plan": "Plan Meals",
+    "Meals_Weekly_message": "Plan your meals for the week with an easy-to-use calendar.",
+
+    "Preferences_Enter": "Enter your preferences",
+    "Preferences_SelectFavorites": "Select your favorite recipes, the rest is automatic!",
+    "Preferences_BasedOn": "Based on Your Preferences and Your Food",
+
+    "ShoppingList_Main": "Shopping List",
+    "ShoppingList_Message": "Create and manage your shopping list with ease.",
+    "ShoppingList_Make": "Make a List",
+    "ShoppingList_Manage": "Manage your shopping list",
+   
+    "Form_FieldRequired": "This field is required",
+    "Form_NoSpecialCharacters": "Special characters are not admitted",
+    "Form_MissingCriteria": "Missing: "
+}
