--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -1,80 +1,79 @@
 {
-    "terms_of_used": "Termes d'utilisation",
-    "privacy_policy": "Politique de sécurité",
-    "login":"Connexion",
-    "forgot_password":"Mot de passe oublié",
-    "no_account":"Vous n'avez pas de compte ?",
-    "register_here": "S'enregistrer ici",
-    "user_settings":"Paramètres utilisateur",
-    "logout":"Déconnexion",
-    "ingredients":"Ingrédients",
-    "language":"Langage",
-    "my_recipes":"Mes recettes",
-    "update_settings":"Modifier mes paramètres",
-    "add_recipe" : "Ajouter une recette",
-    "my_preferences":"Mes préférences",
-    "edit_preferences":"Modifier mes préférences",
-    "preferences":"Préférences",
-    "sign_into_account":"Renseignez vos informations",
-    "enter_email_address":"Entrez votre adresse mail",
-    "enter_password":"Entrez votre mot de passe",
-    "generate_recipe":"Générer une recette",  
-    "sign_out": "Se déconnecter",
-    "account_settings": "Paramètres du compte",
-    "preferences_based" :"Basée sur vos préférences",
-    "import_aliment":"Importer un aliment",
-    "ingredients_consume_quickly":"Ingrédients à consommer rapidement",
-    "ingredients_consume_week":"Ingrédients à consommer cette semaine",
-    "password_required":"Le mot de passe est requis",
-    "email_required":"L'email est requis",
-    "next_recipes":"Prochaines recettes",
-    "register_new_account":"Créer un nouveau compte",
-    "register":"Enregistrer",
-    "recipes_message":"Retrouvez une liste complète de recettes basés sur vos ingrédients.",
-    "enter_your_preferences":"Renseignez vos préférences",
-    "select_favorite_recipes":"Sélectionnez vos recettes préférées, le reste est automatique !",
-    "inventory":"Inventaire",
-    "recipes_available":"Recettes disponibles",
-    "view_recipes":"Voir les recettes",
-    "items_tocked":"Items stockés",
-    "plan_meals":"Planifiez vos plâts",
-    "make_a_list":"Gérez votre liste",
-    "planned_meals":"Repas planifiés",
-    "manage_user_settings":"Paramètres",
-    "list_all_ingredients":"Répertorier tous les ingrédients",
-    "user_preferences":"Dites nous vos préférences",
-    "manage_shopping_list":"Gérez votre liste de courses",
-    "manage_meals":"Gérez vos repas de la semaine",
-    "statistics_weeks":"Statisticques sur les semaines précédentes",
-    "add_recipes":"Ajoutez vos propres recettes",
-    "get_recipes":"Retrouvez des recettes basés sur vos préférences et disponibilité",
-    "manage_inventory":"Gérez votre inventaire",
-    "import_food":"Importez vos aliments",
-    "recipes":"Recettes",
-    "receipes":"Recettes",
-    "receipes_message":"Découvrez des recettes à faire avec vos ingrédients.",
-    "view_receipes":"Voir les recettes",
-    "shopping_list_message":"Créez et gérer facilement vos listes de courses.",
-    "explore":"Explorer",
-    "weekly_meals":"Repas de la semaine",
-    "weekly_meals_message":"Planifiez vos repas de la semaine avec un calendrier facile à utiliser.",
-    "shopping_list":"Liste de courses",
-    "inventory_message":"Gardez une trace de vos ingrédients et gérez votre garde-manger.",
-    "field_required":"Ce champ est requis",
-    "enter_username":"Entrez votre nom d'utilisateur",
-    "enter_firstName":"Entrez votre nom",
-    "enter_lastName":"Entrez votre prénom",
-    "field_noSpecCar":"Les caractères spéciaux ne sont pas admis",
-    "already_have_account":"Vous avez déjà un compte ?",
-    "email_in_use":"L'email est déjà utilisé",
-    "field_email":"Le mail doit être au format valide (ex: nom@exemple.com)",
-    "missing_criteria": "Il manque : ",
-    "password_criteria": {
-      "min_length": "Au moins 8 caractères",
-      "special_char": "1 caractère spécial (ex: !@#$%^&*)",
-      "uppercase": "1 lettre majuscule",
-      "lowercase": "1 lettre minuscule",
-      "number": "1 chiffre"
-    }
+  "Legal_TermsOfUse": "Termes d'utilisation",
+  "Legal_PrivacyPolicy": "Politique de sécurité",
 
-  }
+  "Auth_ForgotPassword": "Mot de passe oublié",
+  "Auth_NoAccountPrompt": "Vous n'avez pas de compte ?",
+  "Auth_RegisterLink": "S'enregistrer ici",
+  "Auth_SignIntoAccount": "Renseignez vos informations",
+  "Auth_EnterEmailAddress": "Entrez votre adresse mail",
+  "Auth_EnterPassword": "Entrez votre mot de passe",
+  "Auth_PasswordRequired": "Le mot de passe est requis",
+  "Auth_EmailRequired": "L'email est requis",
+  "Auth_RegisterNewAccount": "Créer un nouveau compte",
+  "Auth_RegisterButton": "Enregistrer",
+  "Auth_AlreadyHaveAccount": "Vous avez déjà un compte ?",
+  "Auth_EnterUsername": "Entrez votre nom d'utilisateur",
+  "Auth_EnterFirstName": "Entrez votre nom",
+  "Auth_EnterLastName": "Entrez votre prénom",
+  "Auth_EmailFormatPrompt": "Le mail doit être au format valide (ex: nom@exemple.com)",
+  "Auth_EmailInUse": "L'email est déjà utilisé",
+  "Auth_SignOut": "Se déconnecter",
+
+  "Password_MinLength": "Au moins 8 caractères",
+  "Password_SpecialChar": "1 caractère spécial (ex: \\!@#\\$%\\^&\\*)",
+  "Password_Strength": "Le mot de passe doit avoir au moins 8 caractères, 1 majuscule, 1 minuscule, 1 caractère spécial et 1 chiffre",
+
+  "Settings_User": "Paramètres utilisateur",
+  "Settings_Update": "Modifier mes paramètres",
+  "Settings_MyPreferences": "Mes préférences",
+  "Settings_Language": "Langage",
+  "Settings_Account": "Paramètres du compte",
+  "Settings_UserPreferences": "Dites nous vos préférences",
+  "Settings_ManageUser": "Paramètres",
+  "Settings_EditPreferences": "Modifier mes préférences",
+  "Settings_Preferences": "Préférences",
+
+  "Recipes_List": "Recettes",
+  "Recipes_Ingredients": "Ingrédients",
+  "Recipes_Explore": "Explorer",
+  "Recipes_AddNew": "Ajouter une recette",
+  "Recipes_MyRecipes": "Mes recettes",
+  "Recipes_Next": "Prochaines recettes",
+  "Recipes_Message": "Retrouvez une liste complète de recettes basés sur vos ingrédients.",
+  "Recipes_IngredientList": "Répertorier tous les ingrédients",
+  "Recipes_Available": "Recettes disponibles",
+  "Recipes_View": "Voir les recettes",
+  "Recipes_AddOwn": "Ajoutez vos propres recettes",
+  "Recipe_Generate": "Générer une recette",
+  "Recipes_GetBasedOnPreferences": "Retrouvez des recettes basés sur vos préférences et disponibilité",
+
+  "Inventory_ItemsStocked": "Items stockés",
+  "Inventory_QuickConsume": "Ingrédients à consommer rapidement",
+  "Inventory_ThisWeekConsume": "Ingrédients à consommer cette semaine",
+  "Inventory_ImportFood": "Importez vos aliments",
+  "Inventory_ImportAliment": "Importer un aliment",
+  "Inventory_StatisticsWeeks": "Statistiques sur les semaines précédentes",
+  "Inventory_Manage": "Gérez votre inventaire",
+  "Inventory_Main": "Inventaire",
+  "Inventory_Message": "Gardez une trace de vos ingrédients et gérez votre garde-manger.",
+
+  "Meals_Weekly": "Repas de la semaine",
+  "Meals_Planned": "Repas planifiés",
+  "Meals_ManageWeekly": "Gérez vos repas de la semaine",
+  "Meals_Plan": "Planifiez vos plâts",
+  "Meals_Weekly_message": "Planifiez vos repas de la semaine avec un calendrier facile à utiliser.",
+
+  "Preferences_Enter": "Renseignez vos préférences",
+  "Preferences_SelectFavorites": "Sélectionnez vos recettes préférées, le reste est automatique !",
+  "Preferences_BasedOn": "Basée sur vos préférences",
+
+  "ShoppingList_Main": "Liste de courses",
+  "ShoppingList_Message": "Créez et gérez facilement vos listes de courses.",
+  "ShoppingList_Make": "Gérez votre liste",
+  "ShoppingList_Manage": "Gérez votre liste de courses",
+
+  "Form_FieldRequired": "Ce champ est requis",
+  "Form_NoSpecialCharacters": "Les caractères spéciaux ne sont pas admis",
+  "Form_MissingCriteria": "Il manque : "
+}
