reorder translations & store files, fix routing issue

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,9 +1,17 @@
 {
-    "Legal_TermsOfUse": "Terms of Used",
-    "Legal_PrivacyPolicy": "Privacy Policy",
-
+    "SignIn_Title": "Sign In",
+    "SignIn_Subtitle": "Your Social Campaigns",
+    "SignIn_WithGoogle": "Sign in with Google",
+    "SignIn_WithApple": "Sign in with Apple",
+    "SignIn_OrWithEmail": "Or with email",
+    "SignIn_Wait": "Please wait...",
+    "Register_Title": "Register",
+    "Register_Subtitle": "Join our community",
+    "Register_WithGoogle": "Register with Google",
+    "Register_WithApple": "Register with Apple",
+    "Register_OrWithEmail": "Or with email",
     "Auth_ForgotPassword": "Forgot Password",
-    "Auth_NoAccountPrompt": "Don't have an account ?",
+    "Auth_NoAccountPrompt": "Don't have an account?",
     "Auth_RegisterLink": "Register Here",
     "Auth_SignIntoAccount": "Sign into your account",
     "Auth_EnterEmailAddress": "Enter email address",
@@ -12,28 +20,13 @@
     "Auth_EmailRequired": "Email is required",
     "Auth_RegisterNewAccount": "Register new account",
     "Auth_RegisterButton": "Register",
-    "Auth_AlreadyHaveAccount": "Already have an account ?",
+    "Auth_AlreadyHaveAccount": "Already have an account?",
     "Auth_EnterUsername": "Enter username",
     "Auth_EnterFirstName": "Enter first name",
     "Auth_EnterLastName": "Enter last name",
     "Auth_EmailFormatPrompt": "The email should be in correct format (ex: nom@exemple.com)",
     "Auth_EmailInUse": "Email already in use",
     "Auth_SignOut": "Sign Out",
-
-    "Password_MinLength": "At least 8 characters",
-    "Password_SpecialChar": "1 special character (e.g., \\!@#\\$%\\^&\\*)",
-    "Password_Strength": "The password must have at least 8 characters 1 maj, 1 min, 1 spec. char & 1 number",
-
-    "Settings_User": "User Settings",
-    "Settings_Update": "Update Settings",
-    "Settings_MyPreferences": "My preferences",
-    "Settings_Language": "Language",
-    "Settings_Account": "Account Settings",
-    "Settings_UserPreferences": "Tell us your preferences",
-    "Settings_ManageUser": "Settings",
-    "Settings_EditPreferences": "Edit preferences",
-    "Settings_Preferences": "Preferences",
-    "Settings_ProfileCompleation":"Profile Compleation",
 
     "Recipes_List": "Recipes",
     "Recipes_Ingredients": "Ingredients",
@@ -66,78 +59,51 @@
     "Meals_Plan": "Plan Meals",
     "Meals_Weekly_message": "Plan your meals for the week with an easy-to-use calendar.",
 
-    "Preferences_Enter": "Enter your preferences",
-    "Preferences_SelectFavorites": "Select your favorite recipes, the rest is automatic!",
-    "Preferences_BasedOn": "Based on Your Preferences and Your Food",
-
     "ShoppingList_Main": "Shopping List",
     "ShoppingList_Message": "Create and manage your shopping list with ease.",
     "ShoppingList_Make": "Make a List",
     "ShoppingList_Manage": "Manage your shopping list",
-    "ShoppingList_Items":"Items in shopping list",
+    "ShoppingList_Items": "Items in shopping list",
 
+    "Settings_User": "User Settings",
+    "Settings_Update": "Update Settings",
+    "Settings_MyPreferences": "My Preferences",
+    "Settings_Language": "Language",
+    "Settings_Account": "Account Settings",
+    "Settings_UserPreferences": "Tell us your preferences",
+    "Settings_ManageUser": "Settings",
+    "Settings_EditPreferences": "Edit Preferences",
+    "Settings_Preferences": "Preferences",
+    "Settings_ProfileCompleation": "Profile Completion",
+
+    "Password_MinLength": "At least 8 characters",
+    "Password_SpecialChar": "1 special character (e.g., \\!@#\\$%\\^&\\*)",
+    "Password_Strength": "The password must have at least 8 characters 1 maj, 1 min, 1 spec. char & 1 number",
     "Form_FieldRequired": "This field is required",
     "Form_NoSpecialCharacters": "Special characters are not admitted",
     "Form_MissingCriteria": "Missing: ",
     "Form_EmailPlaceholder": "Enter your email address",
     "Form_PasswordPlaceholder": "Enter your password",
     "Form_ForgotPassword": "Forgot Password ?",
-
-    "Image_ChangeAvatarTooltip": "Change avatar",
-    "Image_CancelAvatarTooltip": "Cancel avatar",
-    "Image_RemoveAvatarTooltip": "Remove avatar",
-    "Image_FormText": "Allowed file types: png, jpg, jpeg.",
-    
-    "Label_Name": "Name",
-    "Label_Description": "Description",
-    "Label_Location": "Location",
-    "Label_Type": "Type",
-
-    "Button_Update": "Update",
-    "Button_SignIn": "Sign Into Account",
-
     "Header_ManageKitchen": "Manage your kitchen from your phone",
-
-    "SignIn_Title": "Sign In",
-    "SignIn_Subtitle": "Your Social Campaigns",
-    "SignIn_WithGoogle": "Sign in with Google",
-    "SignIn_WithApple": "Sign in with Apple",
-    "SignIn_OrWithEmail": "Or with email",
-    "SignIn_Wait": "Please wait...",
-
     "Footer_NotMember": "Not a Member yet?",
     "Footer_SignUp": "Sign up",
     "Footer_Terms": "Terms",
     "Footer_Plans": "Plans",
     "Footer_ContactUs": "Contact Us",
-
     "LanguageSwitcher_Tooltip": "Change Language",
     "Language_English": "English",
     "Language_French": "French",
-
-    "Card_Preparation": "Preparation",
-    "Card_CookingTime": "Cooking Time",
-    "Card_Description": "Description",
-
-    "Form_Title_AddRecipe": "Add Recipe",
-    "Label_Image": "Image",
-    "Tooltip_ChangeImage": "Change Image",
-    "Tooltip_CancelImage": "Cancel Image",
-    "Tooltip_RemoveImage": "Remove Image",
-    "Input_NamePlaceholder": "Recipe Name",
-    "Label_Ingredients": "Ingredients",
-    "Input_IngredientsPlaceholder": "Add Ingredients",
-    "Label_Category": "Category",
-    "Input_CategoryPlaceholder": "Add one or more categories",
-    "Label_PreparationTime": "Preparation",
-    "Label_CookingTime": "Cooking Time",
-    "Label_PreparationSteps": "Preparation Steps",
-    "Label_TipsAndTricks": "Tips and Tricks",
-    "Label_Portions": "Portions",
-    "Input_PortionsPlaceholder": "Portions",
-    "Input_DescriptionPlaceholder": "Description",
-    "Label_SuggestedPairings": "Suggested Complementary Dishes (wines...)",
-    "Input_SuggestedPairingsPlaceholder": "Suggestion"
-
-    
+    "Image_ChangeAvatarTooltip": "Change avatar",
+    "Image_CancelAvatarTooltip": "Cancel avatar",
+    "Image_RemoveAvatarTooltip": "Remove avatar",
+    "Image_FormText": "Allowed file types: png, jpg, jpeg.",
+    "Label_Name": "Name",
+    "Label_Description": "Description",
+    "Label_Location": "Location",
+    "Label_Type": "Type",
+    "Button_Update": "Update",
+    "Button_SignIn": "Sign Into Account",
+    "Legal_TermsOfUse": "Terms of Use",
+    "Legal_PrivacyPolicy": "Privacy Policy"
 }
