refactor preferences & add store

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -42,6 +42,23 @@
     "Recipe_Generate": "Generate a Recipe",
     "Recipes_GetBasedOnPreferences": "Get recipes based on your preferences & disponibility",
 
+    "NewIngredient_ModalTitle":  "Import an Ingredient",
+    "NewIngredient_ScanQrCode": "Scan QrCode",
+    "NewIngredient_AnalyseImage": "Analyze Image",
+    "NewIngredient_NameLabel": "Name",
+    "NewIngredient_NamePlaceholder": "Enter the name of the ingredient",
+    "NewIngredient_CategoryLabel": "Category",
+    "NewIngredient_ExpiryDateLabel": "Expiry Date",
+    "NewIngredient_ExpiryDatePlaceholder": "Select the date",
+    "NewIngredient_LocationLabel": "Location",
+    "NewIngredient_QuantityLabel":  "Quantity",
+    "NewIngredient_QuantityPlaceholder": "Enter the quantity",
+    "NewIngredient_DescriptionLabel":  "Description",
+    "NewIngredient_DescriptionPlaceholder": "Add details",
+    "NewIngredient_CancelButton": "Cancel",
+    "NewIngredient_AddButton":  "Add",
+    "NewIngredient_PleaseWait": "Please wait...",
+
     "Inventory_ItemsStocked": "Items stocked",
     "Inventory_QuickConsume": "Ingredients to consume quickly",
     "Inventory_ThisWeekConsume": "Ingredients to consume this week",
@@ -75,6 +92,20 @@
     "Settings_EditPreferences": "Edit Preferences",
     "Settings_Preferences": "Preferences",
     "Settings_ProfileCompleation": "Profile Completion",
+
+    "Preferences_cuisineFavorite":"Favorite Cuisine",
+    "Preferences_favoriteFoods":"Favorite Foods",
+    "Preferences_preferredOrigin":"Preferred Origin",
+    "Preferences_allergies":"Allergies",
+    "Preferences_dislikedFoods":"Disliked Foods",
+    "Preferences_dietaryRestrictions":"Dietary Restrictions",
+    "Preferences_mealTypePreference":"Meal Type Preference",
+    "Preferences_cookingSkillLevel":"Cooking Skill Level",
+    "Preferences_favoriteIngredients":"Favorite Ingredients",
+    "Preferences_healthFocus":"Health Focus",
+    "Preferences_mealPreparationTime":"Meal Preparation Time",
+    "Preferences_spiceTolerance":"Spice Tolerance",
+
 
     "Password_MinLength": "At least 8 characters",
     "Password_SpecialChar": "1 special character (e.g., \\!@#\\$%\\^&\\*)",
