--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -37,6 +37,23 @@
   "Recipe_Generate": "Générer une recette",
   "Recipes_GetBasedOnPreferences": "Retrouvez des recettes basés sur vos préférences et disponibilité",
 
+  "NewIngredient_ModalTitle":  "Importer un Aliment",
+  "NewIngredient_ScanQrCode": "Scanner le QrCode",
+  "NewIngredient_AnalyseImage": "Analyser l'Image",
+  "NewIngredient_NameLabel": "Nom",
+  "NewIngredient_NamePlaceholder": "Entrez le nom de l'aliment",
+  "NewIngredient_CategoryLabel": "Catégorie",
+  "NewIngredient_ExpiryDateLabel": "Date de péremption",
+  "NewIngredient_ExpiryDatePlaceholder": "Sélectionnez la date",
+  "NewIngredient_LocationLabel": "Emplacement",
+  "NewIngredient_QuantityLabel":  "Quantité",
+  "NewIngredient_QuantityPlaceholder": "Saisissez la quantité",
+  "NewIngredient_DescriptionLabel":  "Description",
+  "NewIngredient_DescriptionPlaceholder": "Ajouter des détails",
+  "NewIngredient_CancelButton": "Annuler",
+  "NewIngredient_AddButton":  "Ajouter",
+  "NewIngredient_PleaseWait": "Veuillez patienter...",
+
   "Inventory_ItemsStocked": "Items stockés",
   "Inventory_QuickConsume": "Ingrédients à consommer rapidement",
   "Inventory_ThisWeekConsume": "Ingrédients à consommer cette semaine",
@@ -70,6 +87,21 @@
   "Settings_EditPreferences": "Modifier mes préférences",
   "Settings_Preferences": "Préférences",
   "Settings_ProfileCompleation": "Complétion du profil",
+
+  "Preferences_cuisineFavorite":"Favorite Cuisine",
+  "Preferences_favoriteFoods":"Aliments préférés",
+  "Preferences_preferredOrigin":"Origine préférée",
+  "Preferences_allergies":"Allergies",
+  "Preferences_dislikedFoods":"Aliments non appreciés",
+  "Preferences_dietaryRestrictions":"Restrictions alimentaires",
+  "Preferences_mealTypePreference":"Catégorie de repas",
+  "Preferences_cookingSkillLevel":"Compétences en cuisine",
+  "Preferences_favoriteIngredients":"Ingrédients favoris",
+  "Preferences_healthFocus":"Focus santé",
+  "Preferences_mealPreparationTime":"Temps de préparation disponible",
+  "Preferences_spiceTolerance":"Tolérance épices",
+
+
 
   "Password_MinLength": "Au moins 8 caractères",
   "Password_SpecialChar": "1 caractère spécial (ex: \\!@#\\$%\\^&\\*)",
